worked on function to move sun through sky based on current time - did not work

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ font-style: normal;
 
 #main{
     height: 60vh;
+    position: relative;
 }
 
 /*--------------------------------WeatherCodeClasses--------------------------------*/
@@ -59,63 +60,9 @@ font-style: normal;
 
 /*-----------------------Clear Sky---------------------------------------*/
 #sun{
-    position: relative;
-    margin: 50px auto;
-    width: 150px;
-    height: 150px;
-    background-color: rgb(255, 237, 71);
-    border-radius: 50%;
-}
-
-.sunRay {
-    height: 20px;
-    width: 5px;
-    background-color: rgb(255, 237, 71);
     position: absolute;
-  }
-
-  #sunRay0{
-    top: -30px;
-    left: 75px;
-  }
-
-  #sunRay1{
-    top: 0px;
-  right: 0px;
-  transform: rotate(45deg);
-  }
-
-  #sunRay2{
-    right: -25px;
-    top: 72px;
-    transform: rotate(90deg);
-  }
-
-  #sunRay3{
-    right: 0px;
-    top: 130px;
-    transform: rotate(-45deg);
-  }
-  
-  #sunRay4 {
-    bottom: -30px;
-    left: 75px;
-  }
-  
-  #sunRay5{
-    left: 0px;
-    top: 130px;
-    transform: rotate(-135deg);
-  }
-  
-  #sunRay6{
-    left: -25px;
-    top: 72px;
-    transform: rotate(90deg);
-  }
-  
-  #sunRay7 {
-    top: 0px;
-    left: 0px;
-    transform: rotate(135deg);
-  }
+    top: 20%; /*Range from 100 (below horizon) to 20% (midday)*/
+    left: 70%; /*Range from 10 (morning) to 70 (evening)*/
+    width: 130px;
+    height: 130px;
+}
