--- a/style.css
+++ b/style.css
@@ -24,7 +24,31 @@ font-style: normal;
 }
 
 /*----------------------------CelestialStuff-----------------------*/
+#celestialBody{
+    --offsetAmount: 0%;
+    position: relative;
+    width: 130px;
+    height: 130px;
+    offset-path: ellipse(50% 50% at bottom);
+    offset-distance: var(--offsetAmount);
+}
 
+#sunface {
+    position: relative;
+    height: 40%;
+    width: 40%;
+    margin: auto;
+    /*position: absolute;
+    height: 40%;
+    width: 40%;
+    left: 50%;
+    top: 30%;
+    transform: translateX(-50%);*/
+}
+
+#sun{
+    position: absolute;
+}
 
 /*--------------------------------WeatherCodeClasses--------------------------------*/
 .clear{
@@ -70,14 +94,6 @@ font-style: normal;
 }
 
 /*-----------------------ClearSky---------------------------------------*/
-#celestialBody{
-    --offsetAmount: 0%;
-    position: relative;
-    width: 130px;
-    height: 130px;
-    offset-path: ellipse(50% 50% at bottom);
-    offset-distance: var(--offsetAmount);
-}
 
 
 /*-----------------------Clouds-------------------------------*/
@@ -108,31 +124,6 @@ font-style: normal;
     transform: translateX(100vw);
    }
 }
-
-#cloud1{
-}
-
-#cloud2{
-}
-
-#cloud3{
-}
-
-#cloud4{
-}
-
-#cloud5{
-}
-
-#cloud6{
-}
-
-#cloud7{
-}
-
-#cloud8{
-}
-
 
 /*---------------------------Stars-------------------------------------*/
 #stars1 {
