--- a/style.css
+++ b/style.css
@@ -115,9 +115,25 @@ form{
     border: #33180c 2px solid;
     border-radius: 3px;
     padding: 30px;
-    display: flex;
-    justify-content: space-around;
     margin: auto;
+    margin-top: 5vh;
+    font-family: "elza", sans-serif;
+font-weight: 500;
+font-style: normal;
+display: flex;
+justify-content: space-around;
+align-items: center;
+}
+
+fieldset{
+    display: flex;
+    flex-direction: column;
+    border: none;
+    width: 25%;
+}
+
+#hidden{
+    visibility: hidden;
 }
 
 button{
