--- a/style.css
+++ b/style.css
@@ -85,11 +85,11 @@ font-style: normal;
 }
 
 .rain {
-    background-color: rgb(204, 218, 223);
+    background: linear-gradient(180deg, rgb(132, 139, 171) 20%, rgba(100,99,107,1) 71%);
 }
 
 .thunderstorm{
-    background-color: rgb(56, 56, 56);
+    background: linear-gradient(180deg, rgba(87,90,102,1) 20%, rgba(40,39,46,1) 71%);
     color: rgb(243, 243, 243);;
 }
 
