--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ font-style: normal;
     box-shadow: black 5px;
     position: relative;
     overflow-x: hidden;
+    overflow-y: hidden;
+    
 }
 
 .spacer{
@@ -100,8 +102,6 @@ font-style: normal;
 .night{
     background: radial-gradient(circle at bottom center, rgba(45,49,79,1) 0%, rgba(50,58,93,1) 48%, rgba(7,0,33,1) 100%);
 }
-
-/*-----------------------ClearSky---------------------------------------*/
 
 
 /*-----------------------Clouds-------------------------------*/
@@ -184,6 +184,70 @@ input{
 ::placeholder{
     color: darkgray;
 }
+
+
+/*---Rain--- stolen from Aaron Rickle on Codepen------*/
+
+
+.rain {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
+  
+  .rain.back-row {
+    display: none;
+    z-index: 1;
+    bottom: 60px;
+    opacity: 0.5;
+  }
+  
+  .drop {
+    position: absolute;
+    bottom: 100%;
+    width: 15px;
+    height: 120px;
+    pointer-events: none;
+    animation: drop 0.5s linear infinite;
+  }
+  
+  @keyframes drop {
+    0% {
+      transform: translateY(0vh);
+    }
+    75% {
+      transform: translateY(63vh);
+    }
+    100% {
+      transform: translateY(63vh);
+    }
+  }
+  
+  .stem {
+    width: 1px;
+    height: 60%;
+    margin-left: 7px;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
+    animation: stem 0.5s linear infinite;
+  }
+  
+  @keyframes stem {
+    0% {
+      opacity: 1;
+    }
+    65% {
+      opacity: 1;
+    }
+    75% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
 
 /*---------------------------Stars-------------------------------------*/
 #stars1 {
