--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ font-style: normal;
     background-color: rgb(167, 208, 243);
 }
 
-.rain {
+.rainScene {
     background: linear-gradient(180deg, rgb(132, 139, 171) 20%, rgba(100,99,107,1) 71%);
 }
 
@@ -188,6 +188,22 @@ input{
 
 /*---Rain--- stolen from Aaron Rickle on Codepen------*/
 
+.wind{
+   animation: wind 0.2s;
+}
+
+@keyframes wind {
+    0% {
+      transform: translateX(-100px);
+    }
+    75% {
+      transform: translateX(200px);
+    }
+    100% {
+      transform: translateX(200px);
+    }
+  }
+
 
 .rain {
     position: absolute;
@@ -231,6 +247,13 @@ input{
     margin-left: 7px;
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.25));
     animation: stem 0.5s linear infinite;
+  }
+
+  .snowFlake{
+    width: 5px;
+    height: 5px;
+    background: white;
+    border-radius: 50%;
   }
   
   @keyframes stem {
